# malunal.config

./: CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  build.py
example/: CMakeLists.txt  testing.cpp
examples/: CMakeLists.txt  testing.cpp
include/malunal/: config.hpp
include/malunal/config/: compiler.hpp  platform.hpp  processor.hpp  stdafx.hpp
include/malunal/config/compiler/: common.hpp  gcc.hpp
include/malunal/config/platform/: common.hpp  linux.hpp  windows.hpp
include/malunal/config/processor/: x64.hpp  x86.hpp
include/simular/: config.hpp
include/simular/config/: compiler.hpp  platform.hpp  processor.hpp
include/simular/config/compiler/: common.hpp  gcc.hpp
include/simular/config/platform/: common.hpp  linux.hpp  windows.hpp
include/simular/config/processor/: x64.hpp  x86.hpp
